--- a/package.json
+++ b/package.json
@@ -1,39 +1,61 @@
 {
   "name": "fizz-cult-app",
-  "version": "0.1.3",
+  "version": "0.2.1",
   "private": true,
   "homepage": "https://igor-trimailov.github.io/fizz-cult-app",
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "4.6.0",
     "classnames": "^2.2.6",
-    "i18next": "^19.4.4",
-    "i18next-browser-languagedetector": "^4.2.0",
-    "i18next-http-backend": "^1.0.12",
-    "lodash": "^4.17.19",
-    "node-sass": "^4.13.1",
-    "react": "^16.13.1",
-    "react-beautiful-dnd": "^13.0.0",
-    "react-bootstrap": "^1.0.0",
-    "react-circular-progressbar": "^2.0.3",
-    "react-dom": "^16.13.1",
-    "react-i18next": "^11.4.0",
-    "react-redux": "^7.2.0",
+    "i18next": "^21.6.4",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.1",
+    "lodash": "^4.17.21",
+    "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-bootstrap": "^1.6.4",
+    "react-circular-progressbar": "^2.0.4",
+    "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.3",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-logger": "^3.0.6",
+    "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.4.1",
+    "sass": "^1.45.2"
+
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.13.4",
+    "@babel/plugin-transform-runtime": "^7.16.7",
+    "@babel/preset-env": "^7.13.5",
+    "@babel/preset-react": "^7.12.13",
+    "babel-loader": "^8.2.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.5.1",
+    "dotenv": "^10.0.0",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "file-loader": "^6.2.0",
+    "gh-pages": "^2.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "prettier": "^2.3.2",
+    "redux-devtools-extension": "^2.13.8",
+    "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.65.0",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.6.0",
+    "webpack-merge": "^5.8.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "SET NODE_ENV=development && webpack serve --config webpack.dev.js --progress --open",
+    "build": "webpack --config prod.config.js --progress",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -51,9 +73,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^2.2.0",
-    "prettier": "^2.0.4"
   }
 }
