--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "sass": "^1.45.2"
-
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -32,6 +31,7 @@
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^10.2.0",
     "css-loader": "^6.5.1",
     "dotenv": "^10.0.0",
     "eslint": "^7.18.0",
@@ -57,7 +57,7 @@
     "start": "SET NODE_ENV=development && webpack serve --config webpack.dev.js --progress --open",
     "build": "webpack --config webpack.prod.js --progress",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "eslintConfig": {
     "extends": "react-app"
