--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "dependencies": {
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
+    "@reduxjs/toolkit": "^1.7.1",
     "bootstrap": "4.6.0",
     "classnames": "^2.2.6",
     "i18next": "^21.6.4",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.1",
     "lodash": "^4.17.21",
+    "query-string": "^7.1.0",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap": "^1.6.4",
@@ -20,9 +22,7 @@
     "react-i18next": "^11.15.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.1",
     "sass": "^1.45.2"
   },
   "devDependencies": {
